refactor: Update app name and display name
Update the app name and display name in app.json and package.json to "DeepSleep". This ensures consistency across the project.

Refactor the base_url.js file

Update the remote URL in the base_url.js file to "https://DeepSleepb.intelgx.com". This reflects the correct URL for the remote server.

Update app name in strings.xml and Info.plist

Update the app name in strings.xml and Info.plist to "DeepSleep". This ensures consistency in the app name across different platforms.

Refactor project structure and file names

Update the project structure and file names to use "DeepSleep" instead of "DeepSleep5". This ensures consistency and clarity in the project.

Update package name in MainActivity.kt and MainApplication.kt

Update the package name in MainActivity.kt and MainApplication.kt to "com.DeepSleep". This ensures consistency in the package name across the project.

Update project name in settings.gradle and AppDelegate.mm

Update the project name in settings.gradle and AppDelegate.mm to "DeepSleep". This ensures consistency in the project name across different files.

Update app name in LaunchScreen.storyboard and DeepSleep5.xcscheme

Update the app name in LaunchScreen.storyboard and DeepSleep5.xcscheme to "DeepSleep". This ensures consistency in the app name across different files.

Update app name in ar.json

Update the app name in ar.json to "#DeepSleep". This ensures consistency in the app name across different locales.

Update app name in LaunchScreen.storyboard and DeepSleep5.xcscheme

Update the app name in LaunchScreen.storyboard and DeepSleep5.xcscheme to "DeepSleep". This ensures consistency in the app name across different files.

Update app name in ar.json

Update the app name in ar.json to "#DeepSleep". This ensures consistency in the app name across different locales.

--- a/ios/DeepSleep5.xcodeproj/xcshareddata/xcschemes/DeepSleep5.xcscheme
+++ b/ios/DeepSleep5.xcodeproj/xcshareddata/xcschemes/DeepSleep5.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "DeepSleep5.app"
-               BlueprintName = "DeepSleep5"
-               ReferencedContainer = "container:DeepSleep5.xcodeproj">
+               BuildableName = "DeepSleep.app"
+               BlueprintName = "DeepSleep"
+               ReferencedContainer = "container:DeepSleep.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "DeepSleep5Tests.xctest"
-               BlueprintName = "DeepSleep5Tests"
-               ReferencedContainer = "container:DeepSleep5.xcodeproj">
+               BuildableName = "DeepSleepTests.xctest"
+               BlueprintName = "DeepSleepTests"
+               ReferencedContainer = "container:DeepSleep.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DeepSleep5.app"
-            BlueprintName = "DeepSleep5"
-            ReferencedContainer = "container:DeepSleep5.xcodeproj">
+            BuildableName = "DeepSleep.app"
+            BlueprintName = "DeepSleep"
+            ReferencedContainer = "container:DeepSleep.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DeepSleep5.app"
-            BlueprintName = "DeepSleep5"
-            ReferencedContainer = "container:DeepSleep5.xcodeproj">
+            BuildableName = "DeepSleep.app"
+            BlueprintName = "DeepSleep"
+            ReferencedContainer = "container:DeepSleep.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
