--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "i18next": "^23.16.3",
+    "lottie-react-native": "^7.0.0",
     "nativewind": "^4.1.21",
     "react": "18.3.1",
     "react-i18next": "^15.1.0",
     "react-native": "0.75.4",
     "react-native-asset": "2.1.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-safe-area-context": "^4.11.1",
