--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@formatjs/intl-locale": "^4.2.1",
     "@formatjs/intl-pluralrules": "^5.3.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/template": "0.75.4",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -35,6 +36,9 @@
     "react-native": "0.75.4",
     "react-native-asset": "2.1.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-eject": "^1.0.0",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-safe-area-context": "^4.11.1",
