--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.7.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "tailwindcss": "^3.4.14",
