--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.2.1",
     "react-native-orientation-locker": "1.6.0",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "^6.4.1",
     "react-native-performance": "5.0.0",
-    "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "3.32.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "3.3.0",
